--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <title>Telegram Mini App</title>
+    <title>ToBeBlossom</title>
   </head>
   <body>
     <div id="root"></div>
